@@ -1,3 +1,13 @@
+2005-02-21  Alan Modra  <amodra@bigpond.net.au>
+
+	* readelf.c (BYTE_GET8): Delete.  Replace uses with BYTE_GET.
+	(byte_get_little_endian): Don't handle size of -8.
+	(byte_get_signed, byte_get_big_endian): Likewise.
+	(print_dec_vma, print_hex_vma): New functions.
+	(print_vma): Use them.  Return chars output.
+	(get_dynamic_data): Return a bfd_vma array.  Add ent_size parm.
+	(process_symbol_table): Handle alpha and s390 .hash.
+
 2005-02-18  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* readelf.c (display_debug_loc): Print out offset for end of
